# lonkero

./: .gitignore  .gitleaks.toml  .semgrep.yml  .semgrepignore  .trivyignore  Cargo.toml  Cross.toml  Dockerfile.worker  LICENSE  README.md  SCAN_MODES_ANALYSIS.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPROVEMENTS.md  build.rs  libpayloads_comprehensive.rlib  lonkero-results 5.json  package.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scheduled-scan.yml  security.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-payload-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-RESEARCH.md
.planning/research/: FEATURES.md  STACK.md
benches/: injection_scanner_benchmarks.rs  optimization_benchmarks.rs  scanner_benchmarks.rs
browser-assist-extension/: README.md  background.js  bypass-scanner.js  cms-scanner.js  content.js  dom-hooks.js  formfuzzer.js  framework-scanner.js  graphql-fuzzer.js  icons.js  interceptors.js  manifest.json  merlin.js  popup.html  popup.js  sql-scanner.js  waf-bypass.js  xss-scanner.js
browser-assist-extension/devtools/: devtools.html  devtools.js  panel.css  panel.html  panel.js
examples/: api_fuzzer_example.rs  generate_reports.rs  test_chromium_xss.rs
examples/configs/: api-security.toml  cicd-pipeline.toml  cloud-audit.toml  default.toml  fast-recon.toml  thorough-pentest.toml
infrastructure/cloudflare-worker/: README.md  package.json  tsconfig.json  wrangler.toml
infrastructure/cloudflare-worker/src/: index.ts
src/: adaptive_concurrency.rs  auth_context.rs  browser_assist.rs  cdn_detector.rs  circuit_breaker.rs  crawler.rs  database.rs  detection_helpers.rs  dns_cache.rs  errors.rs  form_replay.rs  framework_detector.rs  graphql_introspection.rs  headless_crawler.rs  health.rs  http_client.rs  lib.rs  main.rs  metrics.rs  ml_enhancer.rs  monitoring.rs  multi_role.rs  napi_bridge.rs  oob_detector.rs  parasite.rs  payload_cache.rs  payloads.rs  payloads_comprehensive.rs  payloads_optimized.rs  queue.rs  rate_limiter.rs  request_batcher.rs  retry.rs  scorer.rs  session_recording.rs  state_tracker.rs  str_utils.rs  subdomain_enum.rs  types.rs  vulnerability.rs
src/agent/: internal_agent.rs  mod.rs
src/ai/: agent.rs  mod.rs  provider.rs  session.rs  system_prompt.rs  tools.rs
src/analysis/: adaptive_rate_limiter.rs  attack_planner.rs  correlation_engine.rs  hypothesis_engine.rs  intelligence_bus.rs  mod.rs  response_analyzer.rs  tech_detection.rs
src/cli/: main.rs
src/cloud/: error_handling.rs  mod.rs  optimizations.rs
src/config/: core.rs  loader.rs  mod.rs  plugins.rs  profiles.rs  secrets.rs  targets.rs  validation.rs
src/discovery/: endpoint_discovery.rs  mod.rs  subdomain_discovery.rs
src/engine/: mod.rs  rule_engine.rs
src/features/: api.rs  behavior.rs  chain.rs  cloud.rs  cmdi.rs  combo.rs  evasion.rs  mod.rs  severity.rs  signals.rs  sqli.rs  ssti.rs  tech.rs  temporal.rs  traversal.rs  xss.rs
src/inference/: bayesian.rs  channels.rs  mod.rs  signals.rs
src/license/: anti_tamper.rs  anti_tamper_test.rs  mod.rs  scan_auth.rs
src/ml/: auto_learning.rs  features.rs  federated.rs  fp_classifier.rs  integration.rs  mod.rs  privacy.rs  training_data.rs
src/modules/: ids.rs  mod.rs
src/nuclei/: custom_executor.rs  mod.rs  template_validator.rs
src/probes/: mod.rs
src/realtime/: mod.rs
src/registry/: mod.rs  scanner_registry.rs
src/reporting/: api.rs  deduplication.rs  delivery.rs  engine.rs  mappings.rs  mod.rs  templates.rs  types.rs
src/reporting/formats/: csv.rs  html.rs  json.rs  junit.rs  markdown.rs  mod.rs  pdf.rs  sarif.rs  xlsx.rs
src/retest/: mod.rs  orchestrator.rs  proof_validator.rs
src/scanners/: account_takeover.rs  advanced_auth.rs  api_fuzzer.rs  api_gateway_scanner.rs  api_security.rs  api_versioning.rs  arcgis_rest.rs  aspnet_scanner.rs  attack_surface.rs  auth_bypass.rs  auth_flow_tester.rs  auth_manager.rs  azure_apim.rs  baseline_detector.rs  bola.rs  broken_function_auth.rs  business_logic.rs  cache_poisoning.rs  chromium_xss_scanner.rs  clickjacking.rs  client_route_auth_bypass.rs  cloud_security_scanner.rs  cloud_storage.rs  code_injection.rs  cognito_enum.rs  command_injection.rs  compliance_scanner.rs  container_scanner.rs  cors.rs  cors_misconfiguration.rs  crlf_injection.rs  csp_bypass.rs  csrf.rs  cve_2025_55182.rs  cve_2025_55183.rs  cve_2025_55184.rs  deserialization.rs  django_security.rs  dom_clobbering.rs  dom_xss_scanner.rs  (+100 more)
src/scanners/cloud/: api_gateway_security_scanner.rs  aws_ec2.rs  aws_lambda.rs  aws_rds.rs  aws_s3.rs  azure_aks.rs  azure_containers.rs  azure_storage.rs  azure_vm.rs  cloudflare_dns.rs  cloudflare_waf.rs  cloudflare_workers.rs  compliance.rs  compliance_scanner.rs  container_security_scanner.rs  cost_optimizer.rs  gcp_compute.rs  gcp_storage.rs  gitlab_cicd.rs  gitlab_code.rs  gitlab_registry.rs  iam_analyzer.rs  mod.rs  network_analyzer.rs  secrets_scanner.rs
src/scanners/hybrid_xss/: abstract_interpreter.rs  differential_fuzzer.rs  mod.rs  taint_analyzer.rs
src/scanners/internal/: authenticated_scanner.rs  mod.rs  network_discovery.rs
src/signing/: mod.rs
src/validation/: exclusion_validator.rs  mod.rs
src/worker/: mod.rs  scanner_worker.rs
tests/: crawler_test.rs  framework_detector_test.rs  http_client_test.rs  injection_scanner_tests.rs  integration_test.rs  payload_effectiveness_test.rs
tests/cloud/: mod.rs  test_cloud_scanners.rs  test_secrets_scanner.rs
tests/integration/: api_scanners.rs  auth_scanners.rs  command_injection_tests.rs  crlf_tests.rs  graphql_tests.rs  injection_scanners.rs  jwt_tests.rs  ldap_tests.rs  mod.rs  nosql_tests.rs  oauth_tests.rs  path_traversal_tests.rs  sqli_tests.rs  ssrf_tests.rs  template_injection_tests.rs  xss_tests.rs  xxe_tests.rs
