[package]
name = "lonkero"
version = "3.6.5"
rust-version = "1.85"
edition = "2021"
authors = ["Bountyy Oy <info@bountyy.fi>"]
description = "Web scanner built for actual pentests. Fast, modular, Rust."
license-file = "LICENSE"
repository = "https://github.com/bountyyfi/lonkero"
keywords = ["security", "scanner", "vulnerability", "pentest", "web-security"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "lonkero_scanner"
crate-type = ["rlib"]

# Main CLI binary - standalone security scanner
[[bin]]
name = "lonkero"
path = "src/cli/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full", "tracing"] }
futures = "0.3"
futures-util = "0.3"

# Bytes (pinned for security fix RUSTSEC-2026-0007)
bytes = "1.11.1"

# HTTP client with HTTP/2 support
reqwest = { version = "0.13.1", features = ["json", "cookies", "stream", "rustls", "http2", "gzip", "brotli", "deflate"] }

# Redis for queue and caching
deadpool-redis = "0.22"

# PostgreSQL database
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex
regex = "1.12"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.9"

# Headless browser for JavaScript-rendered pages (SPA form detection)
# Using fetch feature for network request interception to discover actual form endpoints
headless_chrome = { version = "1.0", features = ["fetch"] }

# Base64
base64 = "0.22.1"

# Smart pointers and optimized collections
ahash = "0.8"

# Cryptography (for JWT testing and quantum-safe signing)
hmac = "0.12"
sha2 = "0.10"
blake3 = "1.8"

# SSH client for secure authenticated scanning
ssh2 = "0.9"

# Hostname for hardware ID generation
hostname = "0.4"

# DNS resolution (hickory-dns is the modern fork of trust-dns with better async support)
hickory-resolver = "0.25"

# HTML parsing
scraper = "0.25"
html-escape = "0.2"

# Text similarity for baseline comparison
similar = "2.7"

# WebSocket client for exploitation testing
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tungstenite = "0.28"

# TLS support for raw TCP sockets (HTTP smuggling)
tokio-native-tls = "0.3"
native-tls = "0.2"

# Parallelism
rayon = "1.10"

# Rate limiting - Token Bucket
governor = "0.10"
nonzero_ext = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Configuration
config = "0.15"
toml = "0.9"
serde_yaml = "0.9"
notify = "8.2"
validator = { version = "0.20", features = ["derive"] }
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6"
num_cpus = "1.16"

# CLI
clap = { version = "4.5.52", features = ["derive", "env"] }

# UUID
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# CSV generation
csv = "1.3"

# Email sending
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Excel/XLSX generation
rust_xlsxwriter = "0.93.0"

# Additional security dependencies
hex = "0.4"

# Compression for session recordings
flate2 = "1.1"

# License and configuration directories
dirs = "6.0"

# Secure credential storage (OS keychain)
keyring = "3.6.3"
socket2 = "0.6.2"

# Secure temporary directory creation
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[dev-dependencies]
